[package]
name = "butter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
chrono = "0.4"
chronoutil = "0.2.3"
tempdir = "0.3"
